gramatica.bnf
<program>         ::= <statement> | <statement> <program>

<statement>       ::= <assignment> 
                      | <expression> ";"
                      | <if_statement>
                      | <while_statement>
                      | <print_statement>

<assignment>      ::= <name> "=" <expression> ";"

<if_statement>    ::= "se" <conditional> "então" <statement> ["senão" <statement>] [";"]

<while_statement> ::= "enquanto" <conditional> "faça" <statement> [";"]

<print_statement> ::= "imprimir" (<expression> | <string>) ";"

<expression>      ::= <term> { ("+" | "-") <term> }

<term>            ::= <factor> { ("*" | "/") <factor> }

<factor>          ::= <number> 
                      | <name> 
                      | <string>
                      | "(" <expression> ")"

<conditional>     ::= <bool_term> { "OU" <bool_term> }

<bool_term>       ::= <bool_factor> { "E" <bool_factor> }

<bool_factor>     ::= <expression> <relational_operator> <expression>

<relational_operator> ::= "==" | "!=" | "<" | "<=" | ">" | ">="

<number>          ::= [0-9]+

<name>            ::= [a-zA-Z_][a-zA-Z0-9_]*

<string>          ::= '"' .* '"'
